New Crowdin updates (#1446)

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -223,12 +223,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="contributors_public_add_yourself_description">Show contributor info. Provide it to be shown here on an opt-in basis after contributing</string>
     <string name="descending">نزولی</string>
     <string name="ascending">صعودی</string>
-    <string name="disable_spelling_underline">Disable spelling underline</string>
+    <string name="disable_spelling_underline">غیر فعال کردن زیرخط املا</string>
     <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Keyboard suggestions stay, red underline vanishes</string>
     <string name="location">مکان</string>
-    <string name="text_lines">خطوط النص</string>
-    <string name="text_characters">Text Characters</string>
-    <string name="text_words">Text Words</string>
+    <string name="text_lines">خطوط متن</string>
+    <string name="text_characters">نویسه‌های متن</string>
+    <string name="text_words">واژگان متن</string>
     <string name="directory">دایرکتوری</string>
     <string name="recently_viewed_documents">سندهایی که اخیرا استفاده شده است</string>
     <string name="details">ریزگان</string>
@@ -243,60 +243,60 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="math">ریاضی</string>
     <string name="table_of_contents">فهرست محتوا</string>
     <string name="miscellaneous">متفرقه</string>
-    <string name="textaction">Text action</string>
-    <string name="textactions">Text actions</string>
-    <string name="prefer_view">Prefer view</string>
-    <string name="no_calendar_app_is_installed">No calendar app is installed!</string>
-    <string name="popular_documents">Popular documents</string>
-    <string name="color">Color</string>
-    <string name="zero_width_space">Zero-width space</string>
+    <string name="textaction">کنش متن</string>
+    <string name="textactions">کنش‌های متن</string>
+    <string name="prefer_view">نمایش ترجیحی</string>
+    <string name="no_calendar_app_is_installed">برنامه‌ای برای تقویم نصب نشده است!</string>
+    <string name="popular_documents">اسناد محبوب</string>
+    <string name="color">رنگ</string>
+    <string name="zero_width_space">نیم‌فاصله</string>
     <string name="basic_color_scheme">Basic color scheme</string>
     <string name="background_foreground_color_in_editor_works_dark_light">Changes background and foreground color of the text editor. Adjusts to app theme so available in light and dark theme. Syntax highlighting colors remain the same.</string>
-    <string name="preset">Preset</string>
-    <string name="foreground">Foreground</string>
-    <string name="background">Background</string>
+    <string name="preset">پیش‌تنظیم</string>
+    <string name="foreground">پیش‌زمینه</string>
+    <string name="background">پس‌زمینه</string>
     <string name="set_foreground_or_background_color_hexcolor_also_possible">Set foreground or background color of text? Inserting hex color code is also possible.</string>
-    <string name="type">Type</string>
-    <string name="folder">Folder</string>
+    <string name="type">نوع</string>
+    <string name="folder">پوشه</string>
     <string name="folder_is_created_without_extension">- Folder is created without file extension</string>
     <string name="keep_existing_file">- Files and folders are not overwritten</string>
     <string name="multiple_windows">Multiple windows</string>
-    <string name="font">Font</string>
+    <string name="font">قلم</string>
     <string name="open_new_documents_always_in_new_window">Open documents always in separate windows. Switch using the \'recents\' key of your device.</string>
     <string name="enter_or_select_format">Enter or select format</string>
-    <string name="pick_date">Pick date</string>
-    <string name="pick_time">Pick time</string>
+    <string name="pick_date">انتخاب تاریخ</string>
+    <string name="pick_time">انتخاب زمان</string>
     <string name="get_format_instead_date_or_time">Get format instead date or time</string>
-    <string name="always_use_current_date_and_time">Always use current date &amp; time</string>
-    <string name="result">Result</string>
-    <string name="just_time">Time only</string>
+    <string name="always_use_current_date_and_time">همیشه از تاریخ و زمان جاری استفاده شود</string>
+    <string name="result">نتیجه</string>
+    <string name="just_time">فقط زمان</string>
     <string name="just_date">Date only</string>
     <string name="last_used">Last used</string>
     <string name="my_note">my_note</string>
     <string name="close">Close</string>
     <string name="cancel">Cancel</string>
     <string name="do_you_like_this_project_want_donate_to_keep_alive">Do you enjoy this project? Do you want to support further improvements and bug fixes?\n\nDeveloping apps and writing related blog posts take a lot of time! If you want to help the project to continue, please consider a small donation!\n\nThis project is developed in spare time, completely for free and without any advertisements!</string>
-    <string name="app_start_tab">App start tab</string>
+    <string name="app_start_tab">برگه شروع برنامه</string>
     <string name="tab_to_select_at_start">Tab to select when starting the app</string>
     <string name="swipe_to_change_mode">Swipe to change mode</string>
     <string name="swipe_to_change_to_edit_or_view_mode">Swipe to change to edit or view mode (opposite of the current mode)</string>
-    <string name="folder_first">Folder first</string>
+    <string name="folder_first">اول پوشه‌ها</string>
     <string name="go_to">Go to</string>
     <string name="appdata_public">AppData (public)</string>
     <string name="appdata_private">AppData (private)</string>
     <string name="appdata_sdcard">AppData (SD Card)</string>
-    <string name="internal_storage">Internal storage</string>
+    <string name="internal_storage">حافظه داخلی</string>
     <string name="open_the_document_from_main_view">You can open the document from main view on the bottom, the file browser or the launcher. There is also a option to append text shared into Markor.</string>
     <string name="notebook_is_the_home_of_your_files">Notebook is the folder that Markor loads in the file browser when the app is started. It is the home folder of your files.</string>
     <string name="quicknote_is_the_fastest_option_to_write_down_notes">QuickNote is the fastest option to write down notes. It is a file in Markdown format with default location &gt;Notebook/QuickNote.md&lt;, you can set a custom filepath in the settings.</string>
     <string name="todo_is_the_easiest_way_">Manage your tasks with ToDo. It is a file in todo.txt format with default location &gt;Notebook/todo.txt&lt;, you can set a custom filepath in the settings.</string>
-    <string name="navigationbar_color">Navigation bar color</string>
-    <string name="black">Black</string>
-    <string name="white">White</string>
-    <string name="view">View</string>
-    <string name="view_mode">View mode</string>
+    <string name="navigationbar_color">رنگ نوار پیمایش</string>
+    <string name="black">سیاه</string>
+    <string name="white">سفید</string>
+    <string name="view">نمایش</string>
+    <string name="view_mode">حالت نمایش</string>
     <string name="edit_mode">حالت ویرایش</string>
-    <string name="mount_storage">‏اتصال حافظهٔ USB</string>
+    <string name="mount_storage">سوار کردن حافظه</string>
     <string name="application_needs_access_to_storage_mount_it">Permission is required to access this storage. Mount the storage to give access. Confirm this dialog to get a popup. Select the storage there and press select.</string>
     <string name="share_into">Share into</string>
     <string name="favourite">علاقه‌مندی</string>
@@ -316,8 +316,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="template">تمپلیت</string>
     <string name="send_debug_log">فرستادن گزارش های اشکال زدایی</string>
     <string name="print_pdf">چاپ PDF</string>
-    <string name="bigger_headings">Bigger headings</string>
-    <string name="increase_text_size_of_headings_according_to_level">Increase text size of headers according to level (# h1, ## h2. ### h3…)</string>
+    <string name="bigger_headings">عنوان‌های بزرگ‌تر</string>
+    <string name="increase_text_size_of_headings_according_to_level">افزایش اندازه متن برای عنوان‌ها در تناسب با سطح (‪# h1, ## h2. ### h3…‫‬‬)</string>
     <string name="current">جاری</string>
     <string name="record_audio">ضبط صدا</string>
     <string name="attach">اتصال</string>
@@ -340,11 +340,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="jump_to_bottom">پرش به ماه</string>
     <string name="quote">نقل قول</string>
     <string name="heading">عنوان</string>
-    <string name="heading_1">سرشناسهٔ ۱</string>
-    <string name="heading_2">سرشناسهٔ ۲</string>
-    <string name="heading_3">تیتر ۳</string>
-    <string name="heading_4">تیتر ۴</string>
-    <string name="heading_5">سرشناسهٔ ۵</string>
+    <string name="heading_1">عنوان ۱</string>
+    <string name="heading_2">عنوان ۲</string>
+    <string name="heading_3">عنوان ۳</string>
+    <string name="heading_4">عنوان ۴</string>
+    <string name="heading_5">عنوان ۵</string>
+    <string name="heading_6">عنوان ۶</string>
     <string name="bold">ضخیم</string>
     <string name="italic">Italic</string>
     <string name="highlighted">Highlighted</string>
@@ -357,6 +358,45 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="add_project">Add project</string>
     <string name="archive_completed_tasks">Archive completed tasks</string>
     <string name="sort_alphabetically">Sort alphabetically</string>
+    <string name="create_new_file_or_folder">ساخت پرونده یا پوشه جدید</string>
+    <string name="choose_format">انتخاب قالب</string>
+    <string name="selected">انتخاب شده</string>
+    <string name="back">بازگشت</string>
+    <string name="expand_collapse">گسترش دادن / بستن</string>
+    <string name="essential">ضروری</string>
+    <string name="append_human_readable_uuid_to_new_tasks">افزودن UUID قابل خواندن توسط انسان به وظایف جدید</string>
+    <string name="action_order">ترتیب کنش</string>
+    <string name="toggle_action_visibility">تغییر وضعیت پیدایی کنش</string>
+    <string name="load_default_settings">بار کردن تنظیمات پیش‌فرض</string>
+    <string name="drag">کشیدن</string>
+    <string name="created">ایجاد شد</string>
+    <string name="file_encryption_password">گذرواژه رمزگذاری پرونده</string>
+    <string name="no_password_set_cannot_encrypt_decrypt">هیچ گذرواژه‌ای تاکنون تنظیم نشده است لذا امکان رمزگذاری و رمزگشایی وجود ندارد.\nبه تنظیمات&gt; عمومی&gt; گذرواژه بروید و گذرواژه‌ای تنظیم کنید.</string>
+    <string name="encrypt_file_content">رمزگذاری محتوای پرونده</string>
+    <string name="could_not_encrypt_file_content_the_file_was_not_saved">نتوانستیم محتوای پرونده را رمزگذاری کنید. پرونده ذخیره نشد.</string>
+    <string name="could_not_decrypt_file_content_wrong_password_or_is_the_file_maybe_not_encrypted">نتوانستیم محتوای پرونده را رمزگشایی کنیم. گذرواژه نادرستی استفاده کردید؟ آیا این پرونده واقعا توسط رمزگذاری AES مارکور رمزگذاری شده است؟</string>
+    <string name="password_already_set_setting_a_new_password_will_overwrite">گذرواژه از قبل تنظیم شده است. تنظیم گذرواژه جدید بر روی گذرواژه موجود نوشته می‌شود و اگر گذرواژه را فراموش کنید، دیگر نمی‌توانید به پرونده‌های خود دسترسی داشته باشید.</string>
+    <string name="code_block">بلوک کد</string>
+    <string name="add_completion_date">افزودن تاریخ تکمیل</string>
+    <string name="add_completion_date_for_todos_when_marking_them_as_done">افزودن تاریخ تکمیل برای فهرست کارها زمانی که همه‌شان انجام شده باشند</string>
+    <string name="file_description_format">قالب توضیحات پرونده</string>
+    <string name="file_description_format_dialog">قالب برای توضیحات هر پرونده در مرور پرونده. از قوائد SimpleDateFormat اندروید پیروی می‌کند به اضافه FS برای نمایش اندازه پرونده. خالی بگذارید تا از قالب پیش‌فرض برای محل شما استفاده کند.\n\nمثال‌هایی از ورودی:\nFS yyyy MMM dd hh:mm:ss aa\nقالب خروجی:\n30KB 2020 Mar 20 11:24:52 PM</string>
+    <string name="loading_default_value">بارکردن مقادیر پیش‌فرض</string>
+    <string name="file_settings">تنظیمات پرونده</string>
+    <string name="search_and_replace">یافتن / جایگزینی</string>
+    <string name="search_for">جستجو برای</string>
+    <string name="replace_with">جایگزینی با</string>
+    <string name="replace_once">جایگیزینی (۱)</string>
+    <string name="replace_all">جایگزینی همه</string>
+    <string name="matches">تطابقات</string>
+    <string name="search_replace_pattern_error_message">خطای الگوی یافتن و جایگزینی.</string>
+    <string name="backup_settings">تنظیمات پشتیبان‌گیری</string>
+    <string name="restore_settings">تنظیمات بازیابی</string>
+    <string name="failed_to_create_backup">ایجاد نسخه پشتیبان ناموفق بود</string>
+    <string name="export_settings_to_json_file">برون‌ریزی تنظیمات در پرونده json</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">درون‌ریزی تنظیمات از پروند json پشتیبان. در صورت اتمام موفقیت‌آمیز، برنامه از نو اجرا می‌شود.</string>
+    <string name="failed_to_restore_settings_from_backup">عدم موفقیت در بازیابی تنظیمات از نسخه پشتیبان</string>
+    <string name="newline_is_new_paragraph">خط جدید = بند جدید</string>
     <string name="search_in_content">انتخاب محتوا</string>
     <string name="max_search_depth">Search depth</string>
     <string name="ignore_list">لیست موارد نادیده گرفته شده</string>
@@ -375,4 +415,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="additional_contexts_and_projects">بعد از اینکه پرونده بارگزاری شد، موقعیت مکان‌نما در انتهای پرونده قرار بگیرد</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Enter space-separated @contexts and +projects. These will always be visible at todo.txt insert dialogs.</string>
     <string name="infinite">نامحدود</string>
+    <string name="browse_by_project">مرور بر حسب پروژه</string>
+    <string name="browse_by_context">مرور بر حسب زمینه</string>
+    <string name="insert_project">درج پروژه‌ها</string>
+    <string name="insert_context">درج زمینه‌ها</string>
+    <string name="browse_todo">مرور فهرست کار</string>
+    <string name="browse_by_priority">مرور بر حسب اولویت</string>
+    <string name="browse_by_due_date">مرور بر حسب موعد اتمام</string>
+    <string name="due_overdue">سررسیده</string>
+    <string name="due_today">سررسید امروز</string>
+    <string name="due_future">سررسید در آینده</string>
+    <string name="completed">تمام شده</string>
+    <string name="match_any">مطالبقت با هر کدام</string>
+    <string name="match_all">مطابقت با همه</string>
 </resources>
