--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -16,6 +16,21 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="delete">ବିଲୋପ କରନ୍ତୁ</string>
     <string name="appearance">ରୂପ</string>
     <string name="rename">ପୁନଃନାମ</string>
+    <string name="editor">ସମ୍ପାଦକ</string>
     <string name="theme">ଥିମ୍</string>
     <string name="font_size">ଫଣ୍ଟ ଆକାର</string>
+    <string name="changelog">ପରିବର୍ତ୍ତନ ଲଗ୍</string>
+    <string name="language">ଭାଷା</string>
+    <string name="size">ଆକାର</string>
+    <string name="undo">ପୂର୍ବବତ୍</string>
+    <string name="redo">ପୁନଃକରଣ</string>
+    <string name="more">ଅଧିକ</string>
+    <string name="keep_screen_on" needed="false">ସ୍କ୍ରିନ୍ ସଚଳ ରଖନ୍ତୁ</string>
+    <string name="general">ସାଧାରଣ</string>
+    <string name="resources">ସମ୍ବଳ</string>
+    <string name="details">ବିବରଣୀ</string>
+    <string name="type">ପ୍ରକାର</string>
+    <string name="font">ଫଣ୍ଟ</string>
+    <string name="black">କଳା</string>
+    <string name="white">ଧଳା</string>
 </resources>
