--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -16,6 +16,10 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="delete">ବିଲୋପ କରନ୍ତୁ</string>
     <string name="appearance">ରୂପ</string>
     <string name="rename">ପୁନଃନାମ</string>
+    <string name="title">ଆଖ୍ୟା</string>
+    <string name="move">ଘୁଞ୍ଚାନ୍ତୁ</string>
+    <string name="copy">କପି କରନ୍ତୁ</string>
+    <string name="info">ସୂଚନା</string>
     <string name="editor">ସମ୍ପାଦକ</string>
     <string name="theme">ଥିମ୍</string>
     <string name="font_size">ଫଣ୍ଟ ଆକାର</string>
