[ci skip] Update translations (Odia)

--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -20,15 +20,33 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="move">ଘୁଞ୍ଚାନ୍ତୁ</string>
     <string name="copy">କପି କରନ୍ତୁ</string>
     <string name="info">ସୂଚନା</string>
+    <string name="share">ଅଂଶୀଦାର କରନ୍ତୁ</string>
+    <string name="search">ସନ୍ଧାନ କରନ୍ତୁ</string>
     <string name="editor">ସମ୍ପାଦକ</string>
     <string name="theme">ଥିମ୍</string>
+    <string name="about">ବିଷୟରେ</string>
+    <string name="file">ଫାଇଲ୍</string>
+    <string name="image">ପ୍ରତିଛବି</string>
     <string name="font_size">ଫଣ୍ଟ ଆକାର</string>
+    <string name="select">ଚୟନ କରନ୍ତୁ</string>
+    <string name="create">ସୃଷ୍ଟି କରନ୍ତୁ</string>
+    <string name="hide_statusbar">ସ୍ଥିତି ଦଣ୍ଡିକା ଲୁଚାଅ</string>
+    <string name="name">ନାମ</string>
+    <string name="url_or_path">URL / ପଥ</string>
+    <string name="insert_link">ଲିଙ୍କ୍ ସନ୍ନିବେଶ କରନ୍ତୁ</string>
+    <string name="insert_image">ପ୍ରତିଛବି ସନ୍ନିବେଶ କରନ୍ତୁ</string>
     <string name="changelog">ପରିବର୍ତ୍ତନ ଲଗ୍</string>
     <string name="language">ଭାଷା</string>
     <string name="size">ଆକାର</string>
+    <string name="press_back_again_to_exit">ପ୍ରସ୍ଥାନ କରିବା ପାଇଁ ପୁଣି \'ବ୍ୟାକ୍\' ଦବାନ୍ତୁ</string>
+    <string name="exit">ପ୍ରସ୍ଥାନ</string>
     <string name="undo">ପୂର୍ବବତ୍</string>
     <string name="redo">ପୁନଃକରଣ</string>
     <string name="more">ଅଧିକ</string>
+    <string name="notebook">ନୋଟବୁକ୍</string>
+    <string name="help">ସହାୟତା</string>
+    <string name="task">ଟାସ୍କ</string>
+    <string name="context">ପ୍ରସଙ୍ଗ</string>
     <string name="keep_screen_on" needed="false">ସ୍କ୍ରିନ୍ ସଚଳ ରଖନ୍ତୁ</string>
     <string name="general">ସାଧାରଣ</string>
     <string name="resources">ସମ୍ବଳ</string>
