--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -47,12 +47,41 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="help">ସହାୟତା</string>
     <string name="task">ଟାସ୍କ</string>
     <string name="context">ପ୍ରସଙ୍ଗ</string>
+    <string name="list">ତାଲିକା</string>
+    <string name="priority">ପ୍ରାଥମିକତା</string>
+    <string name="history">ଇତିବୃତ୍ତି</string>
+    <string name="sync">ସିଙ୍କ୍ କରନ୍ତୁ</string>
+    <string name="save">ସଞ୍ଚୟ କରନ୍ତୁ</string>
     <string name="keep_screen_on" needed="false">ସ୍କ୍ରିନ୍ ସଚଳ ରଖନ୍ତୁ</string>
+    <string name="main_view">ମୁଖ୍ୟ ଦର୍ଶନ</string>
     <string name="general">ସାଧାରଣ</string>
     <string name="resources">ସମ୍ବଳ</string>
+    <string name="default_">ଡିଫଲ୍ଟ</string>
+    <string name="left">ବାମ</string>
+    <string name="right">ଡାହାଣ</string>
+    <string name="top">ଶୀର୍ଷ</string>
+    <string name="bottom">ନିମ୍ନ</string>
+    <string name="center">କେନ୍ଦ୍ର</string>
+    <string name="location">ଅବସ୍ଥାନ</string>
     <string name="details">ବିବରଣୀ</string>
+    <string name="calendar">କ୍ୟାଲେଣ୍ଡର୍</string>
+    <string name="edit_picture">ଛବି ସମ୍ପାଦନା</string>
+    <string name="math">ଗଣିତ</string>
+    <string name="table_of_contents">ସୂଚୀପତ୍ର</string>
+    <string name="miscellaneous">ବିବିଧ</string>
+    <string name="color">ରଙ୍ଗ</string>
     <string name="type">ପ୍ରକାର</string>
+    <string name="folder">ଫୋଲ୍ଡର୍</string>
     <string name="font">ଫଣ୍ଟ</string>
+    <string name="close">ବନ୍ଦ କରନ୍ତୁ</string>
+    <string name="cancel">ବାତିଲ୍‌ କରନ୍ତୁ</string>
     <string name="black">କଳା</string>
     <string name="white">ଧଳା</string>
+    <string name="please_wait">ଦୟାକରି ଅପେକ୍ଷା କରନ୍ତୁ</string>
+    <string name="reload">ପୁନଃଲୋଡ୍ କରନ୍ତୁ</string>
+    <string name="template">ଟେମ୍ପଲେଟ୍</string>
+    <string name="print_pdf">ମୁଦ୍ରଣ / PDF</string>
+    <string name="attach">ସଂଲଗ୍ନ କରନ୍ତୁ</string>
+    <string name="copy_file">ଫାଇଲ୍ କପି କରନ୍ତୁ</string>
+    <string name="page">ପୃଷ୍ଠା</string>
 </resources>
