[ci skip] Update translations (Odia)

--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -16,15 +16,27 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="delete">ବିଲୋପ କରନ୍ତୁ</string>
     <string name="appearance">ରୂପ</string>
     <string name="rename">ପୁନଃନାମ</string>
+    <string name="confirm_delete">ବିଲୋପ ନିଶ୍ଚିତ କରନ୍ତୁ</string>
+    <string name="browse_filesystem">ଫାଇଲ୍ ସିଷ୍ଟମ୍ ବ୍ରାଉଜ୍ କରନ୍ତୁ</string>
     <string name="title">ଆଖ୍ୟା</string>
+    <string name="enter_name_of_folder">ଆପଣଙ୍କ ଫୋଲ୍ଡରର ନାମ ପ୍ରବେଶ କରନ୍ତୁ</string>
+    <string name="create_folder">ଫୋଲ୍ଡର୍ ସୃଷ୍ଟି କରନ୍ତୁ</string>
+    <string name="create_new_document">ନୂତନ ଡକ୍ୟୁମେଣ୍ଟ୍ ସୃଷ୍ଟି କରନ୍ତୁ</string>
     <string name="move">ଘୁଞ୍ଚାନ୍ତୁ</string>
     <string name="copy">କପି କରନ୍ତୁ</string>
     <string name="info">ସୂଚନା</string>
+    <string name="file_folder_already_exists_please_use_a_different_name">ଫାଇଲ୍/ଫୋଲ୍ଡର୍ ପୂର୍ବରୁ ବିଦ୍ୟମାନ ଅଛି! ଦୟାକରି ଏକ ଭିନ୍ନ ନାମ ବ୍ୟବହାର କରନ୍ତୁ</string>
+    <string name="import_from_device">ଡିଭାଇସରୁ ଆମଦାନୀ କରନ୍ତୁ</string>
     <string name="import_">ଆମଦାନୀ କରନ୍ତୁ</string>
+    <string name="select_folder">ଫୋଲ୍ଡର୍ ଚୟନ କରନ୍ତୁ</string>
     <string name="edit">ସମ୍ପାଦନା</string>
     <string name="share">ଅଂଶୀଦାର କରନ୍ତୁ</string>
     <string name="search">ସନ୍ଧାନ କରନ୍ତୁ</string>
     <string name="editor">ସମ୍ପାଦକ</string>
+    <string name="folders">ଫୋଲ୍ଡରଗୁଡ଼ିକ</string>
+    <string name="files">ଫାଇଲଗୁଡ଼ିକ</string>
+    <string name="document">ଡକ୍ୟୁମେଣ୍ଟ୍</string>
+    <string name="documents">ଡକ୍ୟୁମେଣ୍ଟଗୁଡ଼ିକ</string>
     <string name="document_editor_font">ଡକ୍ୟୁମେଣ୍ଟ୍ ସମ୍ପାଦକ ଫଣ୍ଟ</string>
     <string name="theme">ଥିମ୍</string>
     <string name="about">ବିଷୟରେ</string>
@@ -39,6 +51,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="insert_link">ଲିଙ୍କ୍ ସନ୍ନିବେଶ କରନ୍ତୁ</string>
     <string name="insert_image">ପ୍ରତିଛବି ସନ୍ନିବେଶ କରନ୍ତୁ</string>
     <string name="changelog">ପରିବର୍ତ୍ତନ ଲଗ୍</string>
+    <string name="more_info">ଅଧିକ ସୂଚନା</string>
     <string name="language">ଭାଷା</string>
     <string name="size">ଆକାର</string>
     <string name="press_back_again_to_exit">ପ୍ରସ୍ଥାନ କରିବା ପାଇଁ ପୁଣି \'ବ୍ୟାକ୍\' ଦବାନ୍ତୁ</string>
@@ -61,6 +74,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="control_font_size_in_editor">ସମ୍ପାଦକରେ ବ୍ୟବହୃତ ଫଣ୍ଟ ଆକାରକୁ ନିୟନ୍ତ୍ରଣ କରନ୍ତୁ</string>
     <string name="general">ସାଧାରଣ</string>
     <string name="resources">ସମ୍ବଳ</string>
+    <string name="filemanager_doesnot_supply_required_data__appspecific">Markor କେବଳ ସ୍ଥାନୀୟ, ଅଫଲାଇନ୍ ଉପଲବ୍ଧ ଡକ୍ୟୁମେଣ୍ଟଗୁଡ଼ିକୁ ସମ୍ପାଦନ କରିପାରେ ଏବଂ ସମ୍ପୂର୍ଣ୍ଣ ଫାଇଲ୍ ପଥ ପ୍ରଦାନ କରୁନଥିବା ଫାଇଲ୍ ପରିଚାଳକଗୁଡ଼ିକୁ ସମର୍ଥନ କରେ ନାହିଁ।</string>
     <string name="default_">ଡିଫଲ୍ଟ</string>
     <string name="left">ବାମ</string>
     <string name="right">ଡାହାଣ</string>
