--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -125,6 +125,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="internal_storage">ଅନ୍ତର୍ନିହିତ ଷ୍ଟୋରେଜ୍‌</string>
     <string name="black">କଳା</string>
     <string name="white">ଧଳା</string>
+    <string name="view">ଦର୍ଶନ</string>
+    <string name="view_mode">ଦର୍ଶନ ମୋଡ୍</string>
     <string name="edit_mode">ସମ୍ପାଦନ ମୋଡ୍‍</string>
     <string name="please_wait">ଦୟାକରି ଅପେକ୍ଷା କରନ୍ତୁ</string>
     <string name="reload">ପୁନଃଲୋଡ୍ କରନ୍ତୁ</string>
@@ -135,6 +137,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="copy_file">ଫାଇଲ୍ କପି କରନ୍ତୁ</string>
     <string name="page">ପୃଷ୍ଠା</string>
     <string name="experimental_features">ପରୀକ୍ଷାମୂଳକ ବୈଶିଷ୍ଟ୍ୟଗୁଡ଼ିକ</string>
+    <string name="tools">ଉପକରଣ</string>
+    <string name="table">ସାରଣୀ</string>
     <string name="date_and_time">ତାରିଖ ଏବଂ ସମୟ</string>
     <string name="heading_1">ଶିରୋନାମା ୧</string>
     <string name="heading_2">ଶିରୋନାମା ୨</string>
