--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -138,6 +138,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="page">ପୃଷ୍ଠା</string>
     <string name="experimental_features">ପରୀକ୍ଷାମୂଳକ ବୈଶିଷ୍ଟ୍ୟଗୁଡ଼ିକ</string>
     <string name="tools">ଉପକରଣ</string>
+    <string name="reading">ପଢ଼ୁଛନ୍ତି</string>
+    <string name="read">ପଢ଼ନ୍ତୁ</string>
     <string name="table">ସାରଣୀ</string>
     <string name="date_and_time">ତାରିଖ ଏବଂ ସମୟ</string>
     <string name="heading_1">ଶିରୋନାମା ୧</string>
