--- a/app/src/main/res/values-or/strings.xml
+++ b/app/src/main/res/values-or/strings.xml
@@ -118,6 +118,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="font">ଫଣ୍ଟ</string>
     <string name="pick_date">ତାରିଖ ବାଛନ୍ତୁ</string>
     <string name="pick_time">ସମୟ ବାଛନ୍ତୁ</string>
+    <string name="just_time">କେବଳ ସମୟ</string>
+    <string name="just_date">କେବଳ ତାରିଖ</string>
+    <string name="last_used">ଶେଷ ବ୍ୟବହୃତ</string>
     <string name="my_note">ମୋ_ନୋଟ୍</string>
     <string name="close">ବନ୍ଦ କରନ୍ତୁ</string>
     <string name="cancel">ବାତିଲ୍‌ କରନ୍ତୁ</string>
@@ -145,6 +148,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="read">ପଢ଼ନ୍ତୁ</string>
     <string name="table">ସାରଣୀ</string>
     <string name="example_of_a_markdown_table">ଏକ Markdown ଟେବଲ୍ ର ଉଦାହରଣ</string>
+    <string name="open_link">ଲିଙ୍କ୍ ଖୋଲନ୍ତୁ</string>
     <string name="date_and_time">ତାରିଖ ଏବଂ ସମୟ</string>
     <string name="heading_1">ଶିରୋନାମା ୧</string>
     <string name="heading_2">ଶିରୋନାମା ୨</string>
